--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container header-content">
             <div class="logo">
-                <img src="image/logo2-incluwork.png" alt="Logo Capacitação Inclusiva">
+                <img src="logo2-incluwork.png" alt="Logo Capacitação Inclusiva">
             </div>
             <nav class="main-nav">
                 <ul>
